--- a/T007_toast_library/index.html
+++ b/T007_toast_library/index.html
@@ -7,15 +7,7 @@
     <link rel="stylesheet" href="T007_toast.css">
 </head>
 <body>
-    <!-- <div class="toast-container" data-position="top-left">
-        <div class="toast">
-            Toast message
-        </div>
-        <div class="toast">
-            Toast message
-        </div>
-    </div> -->
-    <button>Show Toast</button>
+    <button type="button" title="Show Toast">Show Toast</button>
     <script type="module" src="Toast.js"></script>
 </body>
 </html>
