--- a/T007_time_library/index.html
+++ b/T007_time_library/index.html
@@ -1,25 +1,13 @@
 <!DOCTYPE html>
-
 <html lang="en">
-
 <head>
-
     <meta charset="UTF-8">
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <title>Document</title>
-
-    <script src="getTime.js"></script>
-
-    <script src="main.js"></script>
-
+    <script src="T007_get_time.js"></script>
 </head>
-
 <body>
-
     <div class="time"></div>
-
+    <script src="time.js"></script>
 </body>
-
 </html>
