--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <style>
     :root {
-        --tmg-orange: rgb(223,110,2);
+        --t007-orange: rgb(223,110,2);
         --white: white;
         --pink: rgb(244,143,177);
     }
@@ -67,14 +67,14 @@
         }
     }
     .magic-star > svg > path {
-        fill: var(--tmg-orange);
+        fill: var(--t007-orange);
     }
     .magic-text {
         background: linear-gradient(to right,
-        var(--tmg-orange),
+        var(--t007-orange),
         var(--white),
         var(--pink),
-        var(--tmg-orange));
+        var(--t007-orange));
         -webkit-text-fill-color: transparent;
         -webkit-background-clip: text;
         background-clip: text;
@@ -111,7 +111,7 @@
         background-color: aquamarine;
         text-decoration: none;
         font-size: 1.25rem;
-        color: var(--tmg-orange);
+        color: var(--t007-orange);
         transition: all 800ms ease;
     }
     a.prototype-link:hover {
