--- a/T007_time_library/index.html
+++ b/T007_time_library/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <div class="time"></div>
-    <script src="time.js"></script>
+    <script src="Test.js"></script>
 </body>
 </html>
