--- a/T007_toast_library/index.html
+++ b/T007_toast_library/index.html
@@ -5,9 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="T007_toast.css">
+    <style>
+        body {
+            height: 100vh;
+            background-image: linear-gradient(30deg, red, orange, yellow, green, blue, indigo, violet);
+            background-repeat: no-repeat;
+            background-size: cover;
+            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        }
+    </style>
 </head>
 <body>
     <button type="button" title="Show Toast">Show Toast</button>
-    <script type="module" src="Toast.js"></script>
+    <script type="module" src="Test.js"></script>
 </body>
 </html>
