--- a/T007_dialog_library/index.html
+++ b/T007_dialog_library/index.html
@@ -15,7 +15,8 @@
     </style>
 </head>
 <body>
-    <button type="button" title="Show Toast" onclick="showToast()">Show Toast</button>
+    <button type="button" title="Show Alert" onclick="showAlert()">Show Alert</button>
+    <button type="button" title="Show Confirm" onclick="showConfirm()">Show Confirm</button>
     <script type="module" src="Test.js"></script>
 </body>
 </html>
