--- a/T007_time_library/index.html
+++ b/T007_time_library/index.html
@@ -4,6 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body {
+            position: relative;
+            align-content: center;
+            justify-items: center;
+            height: 100dvh;
+            background-image: linear-gradient(330deg, red, orange, yellow, green, blue, indigo, violet);
+            background-repeat: no-repeat;
+            background-size: cover;
+            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        }
+        .time {
+            width: fit-content;
+            height: fit-content;
+            color: white;
+            font-size: clamp(40px, 10vmin, 60px);
+            font-weight: bold;
+            -webkit-text-stroke: 2px black;
+        }
+    </style>
     <script src="T007_get_time.js"></script>
 </head>
 <body>
