--- a/index.html
+++ b/index.html
@@ -143,8 +143,10 @@
     </div>
     <div class="last-section">
         <div>
+            <a title="View Prototype 2" href="/TMG_MEDIA_PROTOTYPE/index.html" class="prototype-link">View Video Library</a>
             <a title="View Prototype 1" href="T007_time_library/index.html" class="prototype-link">View Time Library</a>
             <a title="View Prototype 2" href="T007_toast_library/index.html" class="prototype-link">View Toast Library</a>
+            <a title="View Prototype 2" href="T007_dialog_library/index.html" class="prototype-link">View Dialog Library</a>
         </div>
     </div>
     <script>
