updated tools and added input library

--- a/T007_toast_library/index.html
+++ b/T007_toast_library/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>T007 Time Library</title>
+    <link rel="icon" type="image/jpeg" sizes="32x32" href="../assets/images/my_profile_s.jpeg">
     <style>
         body {
             height: 100vh;
