--- a/index.html
+++ b/index.html
@@ -100,16 +100,16 @@
         flex-wrap: wrap;
         padding-inline: 2rem;
         row-gap: 1rem;
-        column-gap: 2rem;
+        column-gap: 1rem;
         width: 100%;
     }
     a.prototype-link {
         font-weight: bold;
         border-radius: .5rem;
-        padding: 1.5rem;
+        padding: 1.2rem;
         background-color: aquamarine;
         text-decoration: none;
-        font-size: 1.25rem;
+        font-size: 1rem;
         color: var(--t007-orange);
         transition: all 800ms ease;
     }
@@ -147,6 +147,7 @@
             <a title="View Prototype 1" href="T007_time_library/index.html" class="prototype-link">View Time Library</a>
             <a title="View Prototype 2" href="T007_toast_library/index.html" class="prototype-link">View Toast Library</a>
             <a title="View Prototype 2" href="T007_dialog_library/index.html" class="prototype-link">View Dialog Library</a>
+            <a title="View Prototype 2" href="T007_input_library/index.html" class="prototype-link">View Input Library</a>
         </div>
     </div>
     <script>
