--- a/T007_input_library/index.html
+++ b/T007_input_library/index.html
@@ -26,9 +26,9 @@
             <h3>Form Builder</h3>
             <div class="drop-zone" id="dropZone"></div>
             <div class="builder-footer">
-                <button type="button" onclick="copyFormHTML()">Copy HTML</button>
                 <button type="button" onclick="exportFormHTML()">Export HTML</button>
                 <button type="button" onclick="exportFormJSON()">Export JSON</button>
+                <button type="button" onclick="copyExportedCode()">Copy Code</button>
                 <button type="button" onclick="saveToLocal()">Save</button>
                 <button type="button" onclick="loadFromLocal()">Load</button>
                 <button type="submit" onclick="submitForm()">Submit</button>
