--- a/T007_input_library/index.html
+++ b/T007_input_library/index.html
@@ -44,6 +44,7 @@
             </div>
         </form>
     </div>
+    <p class="notice" style="position: absolute; bottom: 0; left: 50%; translate: -50%; text-align: center; font-size: 14px; font-weight: bold; margin: 0;">This is just a preview, a proper documentation will soon be available!</p>
     <script type="module" src="T007_input_builder.js"></script>
     <script type="module" src="T007_input.js"></script>
 </body>
