--- a/T007_time_library/index.html
+++ b/T007_time_library/index.html
@@ -24,11 +24,20 @@
             font-weight: bold;
             -webkit-text-stroke: 2px black;
         }
+        .info-text {
+            color: black;
+            text-align: center;
+            font-size: 18px;
+        }
     </style>
     <script src="T007_get_time.js"></script>
 </head>
 <body>
     <div class="time"></div>
+    <div class="info-wrapper">
+        <p class="info-text">You can go to the console and test out the library using window.getTime(), allowed parameter keywords: "now", "day", "month", "year", "fulldate". The time above is generated using window.getTime("now") every second</p>
+    </div>
+    <p class="notice" style="position: absolute; bottom: 0; left: 50%; translate: -50%; text-align: center; font-size: 14px; font-weight: bold; margin: 0;">This is just a preview, a proper documentation will soon be available!</p>
     <script src="Test.js"></script>
 </body>
 </html>
