--- a/T007_input_library/index.html
+++ b/T007_input_library/index.html
@@ -17,6 +17,8 @@
       <div class="draggable" draggable="true" data-type="textarea">Textarea</div>
       <div class="draggable" draggable="true" data-type="email">Email Input</div>
       <div class="draggable" draggable="true" data-type="password">Password Input</div>
+      <div class="draggable" draggable="true" data-type="number">Number Input</div>
+      <div class="draggable" draggable="true" data-type="file">File Input</div>
       <div class="draggable" draggable="true" data-type="select">Select Dropdown</div>
       <div class="draggable" draggable="true" data-type="radio">Radio Group</div>
       <div class="draggable" draggable="true" data-type="checkbox">Checkbox Group</div>
