--- a/index.html
+++ b/index.html
@@ -144,11 +144,11 @@
     </div>
     <div class="last-section">
         <div>
-            <a title="View Prototype 2" href="/TMG_MEDIA_PROTOTYPE/index.html" class="prototype-link">View Video Library</a>
+            <a href="/TMG_MEDIA_PROTOTYPE/index.html" class="prototype-link">View Video Library</a>
             <a title="View Prototype 1" href="T007_time_library/index.html" class="prototype-link">View Time Library</a>
-            <a title="View Prototype 2" href="T007_toast_library/index.html" class="prototype-link">View Toast Library</a>
-            <a title="View Prototype 2" href="T007_dialog_library/index.html" class="prototype-link">View Dialog Library</a>
-            <a title="View Prototype 2" href="T007_input_library/index.html" class="prototype-link">View Input Library</a>
+            <a href="T007_toast_library/index.html" class="prototype-link">View Toast Library</a>
+            <a href="T007_dialog_library/index.html" class="prototype-link">View Dialog Library</a>
+            <a href="T007_input_library/index.html" class="prototype-link">View Input Library</a>
         </div>
     </div>
     <script>
