--- a/T007_toast_library/index.html
+++ b/T007_toast_library/index.html
@@ -8,7 +8,7 @@
   <style>
     body {
       height: 100vh;
-      background-image: linear-gradient(330deg, red, orange, yellow, green, blue, indigo, violet);
+      background-image: linear-gradient(330deg, rgba(255, 0, 0, 0.8), rgba(255, 166, 0, 0.8), rgba(255, 255, 0, 0.8), rgba(0, 128, 0, 0.8), rgba(0, 0, 255, 0.5), rgba(76, 0, 130, 0.8), rgba(238, 130, 238, 0.8));
       background-repeat: no-repeat;
       background-size: cover;
       font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
