--- a/T007_toast_library/index.html
+++ b/T007_toast_library/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>T007 Time Library</title>
+  <title>T007 Toast Library</title>
   <link rel="icon" type="image/jpeg" sizes="32x32" href="../assets/images/my_profile_s.jpeg">
   <style>
     body {
