refactor: prettier formatting

--- a/T007_dialog_library/index.html
+++ b/T007_dialog_library/index.html
@@ -1,42 +1,82 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>T007 Dialog Library</title>
-  <link rel="icon" type="image/jpeg" sizes="32x32" href="../assets/images/my_profile_s.jpeg">   
-  <style>
-    body {
-      height: 100vh;
-      background-image: linear-gradient(330deg, rgba(255, 0, 0, 0.8), rgba(255, 166, 0, 0.8), rgba(255, 255, 0, 0.8), rgba(0, 128, 0, 0.8), rgba(0, 0, 255, 0.5), rgba(76, 0, 130, 0.8), rgba(238, 130, 238, 0.8));
-      background-repeat: no-repeat;
-      background-size: cover;
-      font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-      display: flex;
-      flex-direction: column;
-    }
-    .info-wrapper {
-      flex: 1;
-      display: flex;
-      align-items: center;
-    }
-    .info-text {
-      color: black;
-      text-align: center;
-      font-size: 18px;
-    }
-  </style>
-</head>
-<body>
-  <div>
-    <button type="button" title="Show Alert" onclick="showAlert()">Show Alert</button>
-    <button type="button" title="Show Confirm" onclick="showConfirm()">Show Confirm</button>
-    <button type="button" title="Show Prompt" onclick="showPrompt()">Show Prompt</button>
-  </div>
-  <div class="info-wrapper">
-    <p class="info-text">You can go to the console and test out the dialogs, they work the same way as the browser default dialogs just in title case i.e window.Alert, window.Confirm, window.Prompt</p>
-  </div>
-  <p class="notice" style="position: absolute; bottom: 0; left: 50%; translate: -50%; text-align: center; font-size: 14px; font-weight: bold; margin: 0;">This is just a preview, a proper documentation will soon be available!</p>
-  <script type="module" src="Test.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>T007 Dialog Library</title>
+    <link
+      rel="icon"
+      type="image/jpeg"
+      sizes="32x32"
+      href="../assets/images/my_profile_s.jpeg"
+    />
+    <style>
+      body {
+        height: 100vh;
+        background-image: linear-gradient(
+          330deg,
+          rgba(255, 0, 0, 0.8),
+          rgba(255, 166, 0, 0.8),
+          rgba(255, 255, 0, 0.8),
+          rgba(0, 128, 0, 0.8),
+          rgba(0, 0, 255, 0.5),
+          rgba(76, 0, 130, 0.8),
+          rgba(238, 130, 238, 0.8)
+        );
+        background-repeat: no-repeat;
+        background-size: cover;
+        font-family:
+          "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans",
+          Arial, sans-serif;
+        display: flex;
+        flex-direction: column;
+      }
+      .info-wrapper {
+        flex: 1;
+        display: flex;
+        align-items: center;
+      }
+      .info-text {
+        color: black;
+        text-align: center;
+        font-size: 18px;
+      }
+    </style>
+  </head>
+  <body>
+    <div>
+      <button type="button" title="Show Alert" onclick="showAlert()">
+        Show Alert
+      </button>
+      <button type="button" title="Show Confirm" onclick="showConfirm()">
+        Show Confirm
+      </button>
+      <button type="button" title="Show Prompt" onclick="showPrompt()">
+        Show Prompt
+      </button>
+    </div>
+    <div class="info-wrapper">
+      <p class="info-text">
+        You can go to the console and test out the dialogs, they work the same
+        way as the browser default dialogs just in title case i.e window.Alert,
+        window.Confirm, window.Prompt
+      </p>
+    </div>
+    <p
+      class="notice"
+      style="
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        translate: -50%;
+        text-align: center;
+        font-size: 14px;
+        font-weight: bold;
+        margin: 0;
+      "
+    >
+      This is just a preview, a proper documentation will soon be available!
+    </p>
+    <script type="module" src="Test.js"></script>
+  </body>
 </html>
