refactor: prettier formatting

--- a/T007_time_library/index.html
+++ b/T007_time_library/index.html
@@ -52,9 +52,9 @@
     <div class="time"></div>
     <div class="info-wrapper">
       <p class="info-text">
-        You can go to the console and test out the library using
+        You can go to the console and test out the simple library using
         window.getTime(), allowed parameter keywords: "now", "day", "month",
-        "year", "fulldate". The time above is generated using
+        "year", "fullDate". The time above is generated using
         window.getTime("now") every second
       </p>
     </div>
