--- a/T007_dialog_library/index.html
+++ b/T007_dialog_library/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -25,9 +25,8 @@
         );
         background-repeat: no-repeat;
         background-size: cover;
-        font-family:
-          "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans",
-          Arial, sans-serif;
+        font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+          "Lucida Sans", Arial, sans-serif;
         display: flex;
         flex-direction: column;
       }
@@ -53,6 +52,9 @@
       </button>
       <button type="button" title="Show Prompt" onclick="showPrompt()">
         Show Prompt
+      </button>
+      <button type="button" title="Show Prompt" onclick="playGame()">
+        Play Game
       </button>
     </div>
     <div class="info-wrapper">
