fix: time link fixed

--- a/T007_time_library/index.html
+++ b/T007_time_library/index.html
@@ -46,7 +46,7 @@
         font-size: 18px;
       }
     </style>
-    <script src="T007_get_time.js"></script>
+    <script src="T007_time.js"></script>
   </head>
   <body>
     <div class="time"></div>
