--- a/index.html
+++ b/index.html
@@ -184,13 +184,7 @@
     <div class="last-section">
       <div>
         <a href="/TMG_MEDIA_PROTOTYPE/index.html" class="prototype-link"
-          >View Video Library</a
-        >
-        <a
-          title="View Prototype 1"
-          href="T007_time_library/index.html"
-          class="prototype-link"
-          >View Time Library</a
+          >View Media Library</a
         >
         <a href="T007_toast_library/index.html" class="prototype-link"
           >View Toast Library</a
