refactor: slight changes

--- a/T007_time_library/index.html
+++ b/T007_time_library/index.html
@@ -4,33 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>T007 Time Library</title>
-    <link
-      rel="icon"
-      type="image/jpeg"
-      sizes="32x32"
-      href="../assets/images/my_profile_s.jpeg"
-    />
+    <link rel="icon" type="image/jpeg" sizes="32x32" href="../assets/images/my_profile_s.jpeg" />
     <style>
       body {
         position: relative;
         align-content: center;
         justify-items: center;
         height: 100dvh;
-        background-image: linear-gradient(
-          330deg,
-          rgba(255, 0, 0, 0.8),
-          rgba(255, 166, 0, 0.8),
-          rgba(255, 255, 0, 0.8),
-          rgba(0, 128, 0, 0.8),
-          rgba(0, 0, 255, 0.5),
-          rgba(76, 0, 130, 0.8),
-          rgba(238, 130, 238, 0.8)
-        );
+        background-image: linear-gradient(330deg, rgba(255, 0, 0, 0.8), rgba(255, 166, 0, 0.8), rgba(255, 255, 0, 0.8), rgba(0, 128, 0, 0.8), rgba(0, 0, 255, 0.5), rgba(76, 0, 130, 0.8), rgba(238, 130, 238, 0.8));
         background-repeat: no-repeat;
         background-size: cover;
-        font-family:
-          "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans",
-          Arial, sans-serif;
+        font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
       }
       .time {
         width: fit-content;
@@ -51,28 +35,9 @@
   <body>
     <div class="time"></div>
     <div class="info-wrapper">
-      <p class="info-text">
-        You can go to the console and test out the simple library using
-        window.getTime(), allowed parameter keywords: "now", "day", "month",
-        "year", "fullDate". The time above is generated using
-        window.getTime("now") every second
-      </p>
+      <p class="info-text">You can go to the console and test out the simple library using window.getTime(), allowed parameter keywords: "now", "day", "month", "year", "fullDate". The time above is generated using window.getTime("now") every second</p>
     </div>
-    <p
-      class="notice"
-      style="
-        position: absolute;
-        bottom: 0;
-        left: 50%;
-        translate: -50%;
-        text-align: center;
-        font-size: 14px;
-        font-weight: bold;
-        margin: 0;
-      "
-    >
-      This is just a preview, a proper documentation will soon be available!
-    </p>
+    <p class="notice" style="position: absolute; bottom: 0; left: 50%; translate: -50%; text-align: center; font-size: 14px; font-weight: bold; margin: 0">This is just a preview, a proper documentation will soon be available!</p>
     <script src="Test.js"></script>
   </body>
 </html>
