--- a/T007_input_library/index.html
+++ b/T007_input_library/index.html
@@ -4,12 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>T007 Drag-and-Drop Form Builder</title>
-    <link
-      rel="icon"
-      type="image/jpeg"
-      sizes="32x32"
-      href="../assets/images/my_profile_s.jpeg"
-    />
+    <link rel="icon" type="image/jpeg" sizes="32x32" href="../assets/images/my_profile_s.jpeg" />
     <link rel="stylesheet" href="T007_input_builder.css" />
   </head>
 
@@ -17,39 +12,18 @@
     <div class="builder-container">
       <div class="toolbox">
         <h3>Toolbox</h3>
-        <div class="draggable" draggable="true" data-type="text">
-          Text Input
-        </div>
-        <div class="draggable" draggable="true" data-type="textarea">
-          Textarea
-        </div>
-        <div class="draggable" draggable="true" data-type="email">
-          Email Input
-        </div>
-        <div class="draggable" draggable="true" data-type="password">
-          Password Input
-        </div>
-        <div class="draggable" draggable="true" data-type="number">
-          Number Input
-        </div>
-        <div class="draggable" draggable="true" data-type="file">
-          File Input
-        </div>
-        <div class="draggable" draggable="true" data-type="select">
-          Select Dropdown
-        </div>
-        <div class="draggable" draggable="true" data-type="radio">
-          Radio Group
-        </div>
-        <div class="draggable" draggable="true" data-type="checkbox">
-          Checkbox Group
-        </div>
+        <div class="draggable" draggable="true" data-type="text">Text Input</div>
+        <div class="draggable" draggable="true" data-type="textarea">Textarea</div>
+        <div class="draggable" draggable="true" data-type="email">Email Input</div>
+        <div class="draggable" draggable="true" data-type="password">Password Input</div>
+        <div class="draggable" draggable="true" data-type="number">Number Input</div>
+        <div class="draggable" draggable="true" data-type="file">File Input</div>
+        <div class="draggable" draggable="true" data-type="select">Select Dropdown</div>
+        <div class="draggable" draggable="true" data-type="radio">Radio Group</div>
+        <div class="draggable" draggable="true" data-type="checkbox">Checkbox Group</div>
       </div>
       <form class="form-canvas t007-input-form" novalidate>
-        <div class="incompatible-message">
-          Consider moving to a screen of width at least 500px, Your screen is
-          not wide enough to use the form builder tool box :(
-        </div>
+        <div class="incompatible-message">Consider moving to a screen of width at least 500px, Your screen is not wide enough to use the form builder tool box :(</div>
         <h3>Form Builder</h3>
         <div class="drop-zone" id="dropZone"></div>
         <div class="builder-footer">
@@ -63,16 +37,8 @@
           <div class="output-container">
             <div class="output-buttons-container">
               <div class="output-button-wrapper">
-                <button
-                  type="button"
-                  title="Copy Code"
-                  onclick="copyExportedCode()"
-                >
-                  Copy Code
-                </button>
-                <button type="button" onclick="toggleWrapExportedCode()">
-                  Toggle Wrap
-                </button>
+                <button type="button" title="Copy Code" onclick="copyExportedCode()">Copy Code</button>
+                <button type="button" onclick="toggleWrapExportedCode()">Toggle Wrap</button>
               </div>
             </div>
             <div class="output-box" id="output" data-code=""></div>
@@ -80,21 +46,7 @@
         </div>
       </form>
     </div>
-    <p
-      class="notice"
-      style="
-        position: absolute;
-        bottom: 0;
-        left: 50%;
-        translate: -50%;
-        text-align: center;
-        font-size: 14px;
-        font-weight: bold;
-        margin: 0;
-      "
-    >
-      This is just a preview, a proper documentation will soon be available!
-    </p>
+    <p class="notice" style="position: absolute; bottom: 0; left: 50%; translate: -50%; text-align: center; font-size: 14px; font-weight: bold; margin: 0">This is just a preview, a proper documentation will soon be available!</p>
     <script type="module" src="T007_input_builder.js"></script>
     <script type="module" src="T007_input.js"></script>
   </body>
