--- a/T007_toast_library/index.html
+++ b/T007_toast_library/index.html
@@ -4,52 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>T007 Toast Library</title>
-    <link
-      rel="icon"
-      type="image/jpeg"
-      sizes="32x32"
-      href="../assets/images/my_profile_s.jpeg"
-    />
+    <link rel="icon" type="image/jpeg" sizes="32x32" href="../assets/images/my_profile_s.jpeg" />
     <style>
       body {
         height: 100vh;
-        background-image: linear-gradient(
-          330deg,
-          rgba(255, 0, 0, 0.8),
-          rgba(255, 166, 0, 0.8),
-          rgba(255, 255, 0, 0.8),
-          rgba(0, 128, 0, 0.8),
-          rgba(0, 0, 255, 0.5),
-          rgba(76, 0, 130, 0.8),
-          rgba(238, 130, 238, 0.8)
-        );
+        background-image: linear-gradient(330deg, rgba(255, 0, 0, 0.8), rgba(255, 166, 0, 0.8), rgba(255, 255, 0, 0.8), rgba(0, 128, 0, 0.8), rgba(0, 0, 255, 0.5), rgba(76, 0, 130, 0.8), rgba(238, 130, 238, 0.8));
         background-repeat: no-repeat;
         background-size: cover;
-        font-family:
-          "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans",
-          Arial, sans-serif;
+        font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
       }
     </style>
   </head>
   <body>
-    <button type="button" title="Show Toast" onclick="showToast()">
-      Show Toast
-    </button>
-    <p
-      class="notice"
-      style="
-        position: absolute;
-        bottom: 0;
-        left: 50%;
-        translate: -50%;
-        text-align: center;
-        font-size: 14px;
-        font-weight: bold;
-        margin: 0;
-      "
-    >
-      This is just a preview, a proper documentation will soon be available!
-    </p>
+    <button type="button" title="Show Toast" onclick="showToast()">Show Toast</button>
+    <p class="notice" style="position: absolute; bottom: 0; left: 50%; translate: -50%; text-align: center; font-size: 14px; font-weight: bold; margin: 0">This is just a preview, a proper documentation will soon be available!</p>
     <script type="module" src="Test.js"></script>
   </body>
 </html>
