--- a/T007_toast_library/index.html
+++ b/T007_toast_library/index.html
@@ -17,6 +17,7 @@
   </head>
   <body>
     <button type="button" title="Show Toast" onclick="showToast()">Show Toast</button>
+    <button type="button" title="Show Promise Toast" onclick="showPromiseToast()">Show Promise Toast</button>
     <p class="notice" style="position: absolute; bottom: 0; left: 50%; translate: -50%; text-align: center; font-size: 14px; font-weight: bold; margin: 0">This is just a preview, a proper documentation will soon be available!</p>
     <script type="module" src="Test.js"></script>
   </body>
